backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: api-container
        image: quanregistry2026.azurecr.io/backend-api:v2.9
        imagePullPolicy: Always 
        ports:
        - containerPort: 3000
        resources:           
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        
        # Kiểm tra trạng thái container
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          
      imagePullSecrets:      
      - name: acr-secret
