backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  type: ClusterIP 
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 80 #Service
      targetPort: 3000
