backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - 135.171.144.185.nip.io
    secretName: backend-app-tls 
  rules:
  - host: 135.171.144.185.nip.io
    http:
      paths:
      - path: /api/?(.*) 
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-api-service
            port:
              number: 80
      - path: /?(.*) 
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
